--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "description": "",
+    "description": "Neos CMS l10n helper",
     "type": "neos-package",
     "name": "two13tec/l10nguy",
     "require": {
-        "neos/flow": "*"
+        "neos/flow": "*",
+        "initphp/cli-table": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.1",
         "squizlabs/php_codesniffer": "^3.13",
         "friendsofphp/php-cs-fixer": "^3.87",
         "phpstan/phpstan": "^2.1",
-        "phpstan/extension-installer": "^1.4",
-        "initphp/cli-table": "^1.0"
+        "phpstan/extension-installer": "^1.4"
     },
     "autoload": {
         "psr-4": {
