feat: "l10n:format" command, AGENTS

--- a/Configuration/Settings.Flow.yaml
+++ b/Configuration/Settings.Flow.yaml
@@ -7,6 +7,7 @@ Neos:
           success: 0
           missing: 5
           unused: 6
+          dirty: 8
           failure: 7
         filePatterns:
           includes:
