fix: Proper package discovery, offer defaults

--- a/Configuration/Settings.L10nGuy.yaml
+++ b/Configuration/Settings.L10nGuy.yaml
@@ -26,6 +26,8 @@ Two13Tec:
           pattern: 'Build/**'
           enabled: true
     defaultFormat: 'table'
+    defaultPackages: []
+    defaultPaths: []
     exitCodes:
       success: 0
       missing: 5
