feat: Offer defaultLocales

--- a/Configuration/Settings.L10nGuy.yaml
+++ b/Configuration/Settings.L10nGuy.yaml
@@ -26,6 +26,7 @@ Two13Tec:
           pattern: 'Build/**'
           enabled: true
     defaultFormat: 'table'
+    defaultLocales: []
     defaultPackages: []
     defaultPaths: []
     exitCodes:
