feat: New orderById option to keep XLFs sorted

--- a/Configuration/Settings.L10nGuy.yaml
+++ b/Configuration/Settings.L10nGuy.yaml
@@ -27,6 +27,7 @@ Two13Tec:
           enabled: true
     defaultFormat: 'table'
     tabWidth: 2
+    orderById: false
     defaultLocales: []
     defaultPackages: []
     defaultPaths: []
