refactor: Drop "--dry-run" option, "--update"/"--delete" enable writing, done

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "description": "Neos CMS l10n helper",
     "type": "neos-package",
     "name": "two13tec/l10nguy",
+    "version": "0.1.0",
     "require": {
         "php": "^8.4",
         "neos/flow": "*",
