--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
           XDG_CACHE_HOME: ${{ github.workspace }}/.cache
 
   test:
-    name: "Test (PHP ${{ matrix.php }})"
+    name: "Test (PHP ${{ matrix.php }}, Neos ${{ matrix.neos }})"
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -60,6 +60,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['8.4']
+        neos: ['8.3', '8.4', '9.0']
 
     env:
       FLOW_CONTEXT: Testing
@@ -82,7 +83,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: neos/neos-development-distribution
-          ref: '9.0'
+          ref: '${{ matrix.neos }}'
           path: ${{ env.NEOS_DIST_FOLDER }}
 
       - name: Link package into distribution
@@ -100,8 +101,13 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/composer
-          key: composer-${{ matrix.php }}-${{ hashFiles('**/composer.lock') }}
-          restore-keys: composer-${{ matrix.php }}-
+          key: composer-${{ matrix.php }}-neos-${{ matrix.neos }}-${{ hashFiles('**/composer.lock') }}
+          restore-keys: composer-${{ matrix.php }}-neos-${{ matrix.neos }}-
+
+      # Required for Neos 7...
+      - name: Allow insecure advisories for older Neos constraints
+        working-directory: ${{ env.NEOS_DIST_FOLDER }}
+        run: composer config audit.block-insecure false
 
       - name: Install dependencies
         working-directory: ${{ env.NEOS_DIST_FOLDER }}
