--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.4']
+        php: ["8.4"]
 
     steps:
       - name: Checkout
@@ -59,8 +59,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.4']
-        neos: ['8.3', '8.4', '9.0']
+        php: ["8.4"]
+        neos: ["8.3", "8.4", "9.0"]
 
     env:
       FLOW_CONTEXT: Testing
@@ -83,7 +83,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: neos/neos-development-distribution
-          ref: '${{ matrix.neos }}'
+          ref: "${{ matrix.neos }}"
           path: ${{ env.NEOS_DIST_FOLDER }}
 
       - name: Link package into distribution
