--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "version": "0.1.0",
     "require": {
         "php": "^8.4",
-        "neos/flow": "*",
-        "initphp/cli-table": "^1.0"
+        "neos/flow": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.1",
