--- a/Configuration/Settings.L10nGuy.yaml
+++ b/Configuration/Settings.L10nGuy.yaml
@@ -31,6 +31,7 @@ Two13Tec:
     defaultFormat: 'table'
     tabWidth: 2
     orderById: false
+    setNeedsReview: true
     defaultLocales: []
     defaultPackages: []
     defaultPaths: []
