--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
         "phpstan/phpstan": "^2.1",
         "phpstan/extension-installer": "^1.4"
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Two13Tec\\L10nGuy\\Tests\\": "Tests/"
+        }
+    },
     "autoload": {
         "psr-4": {
             "Two13Tec\\L10nGuy\\": "Classes/"
