--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "phpstan/phpstan": "^2.1",
         "phpstan/extension-installer": "^1.4"
     },
+    "suggest": {
+        "php-llm/llm-chain": "Required for LLM translations"
+    },
     "autoload-dev": {
         "psr-4": {
             "Two13Tec\\L10nGuy\\Tests\\": "Tests/"
